--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,103 +1,137 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-    display: flex;
-    flex-direction: column;
-    line-height: 1.3;
-  }
-  
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1%;
-    background-color: #13293d;
-    color: #fff;
-  }
-  
-  h1 {
-    font-size: 200%;
-  }
-  
-  h2 {
-    margin: 2% 0;
-    font-size: 250%;
-  }
-  
-  nav ul {
-    display: flex;
-    justify-content: space-between;
-    min-width: 300px;
-  }
-  
-  nav a {
-    color: #b9c6ae;
-    font-weight: bold;
-    text-decoration: none;
-  }
-  
-  nav a:hover {
-    color: #fff;
-  }
-  
-  main {
-    display: flex;
-    flex: 1 1 0;
-    max-width: 96%;
-    margin: 2% auto;
-  }
-  
-  article {
-    border-bottom: 1px solid #13293d;
-  }
-  
-  article p {
-    margin: 2% 0;
-    font-size: 110%;
-  }
-  
-  article ul {
-    margin-left: 5%;
-    font-size: 110%;
-    list-style: circle;
-  }
-  
-  article li {
-    margin: 5px 0;
-  }
-  
-  /* Use :nth-child() to select every even list item */
-  article ul li:nth-child(even) {
-    background-color: #b9c6ae;
-    color: #13293d;
-  }
-  
-  /* Use adjacent sibling combinator (+) to select all <p> elements that come immediately after a <ul> element inside of an <article> element */
-  article ul + p {
-    background-color: #13293d;
-    color: #fff;
-  }
-  
-  /* Use child combinator (>) with a wildcard selector (*) to select every single element that is a direct descendant (or child) of any <div> element in an <article> element */
-  article div > * {
-    padding: 20px;
-    border: 4px solid #b9c6ae;
-  }
-  
-  footer {
-    display: flex;
-    justify-content: center;
-    padding: 2%;
-    background-color: #13293d;
-    color: #fff;
-  }
-  
-  @media screen and (max-width: 768px) {
-    header {
-      flex-direction: column;
-      flex-wrap: wrap;
-    }
-  
-    main {
-      max-width: 1200px;
-    }
-  }
-  
+  background-color: #d9dcd6;
+}
+
+/* Profile Picture */
+#absolute-box {
+  position: absolute;
+  top: 70px;
+  left: 60px;
+  display: block;
+  margin: 10px auto;
+  max-width: 150px;
+  border-top-style: double;
+  border-bottom-style: double;  
+  border-left-style: groove;
+}
+
+
+/* Header section is here */
+.header {
+  background-color: #214050;
+  color: #ffffff;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  border-top-style: double;
+  border-bottom-style: double;
+  margin-bottom: 10px;
+  padding: 20px;
+}
+
+.header h1 {
+  display: inline-block;
+  font-size: 48px;
+}
+
+.header h1 .Cherry {
+  color: #000000;
+}
+
+.header div {
+  float: right;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+  margin-right: 20px;
+  padding-top: 15px;
+}
+
+.header div ul {
+  list-style-type: none;
+}
+
+.header div ul li {
+  display: inline-block;
+  margin-left: 25px;
+}
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+p {
+  font-size: 16px;
+}
+
+/* Headliner behind the profile picture */
+.headline {
+  background-image: url(https://www.simplilearn.com/ice9/free_resources_article_thumb/Sales_Led_Product_Led_or_Human_Led_Growth.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 150px;
+  margin-bottom: 25px;
+  width: 100%;
+}
+
+.float-left {
+  float: left;
+  margin-right: 25px;
+}
+
+.float-right {
+  float: right;
+  margin-left: 25px;
+}
+
+.content {
+  display: inline-block;
+  margin-left: 20px;
+  width: 100%;
+}
+
+
+.About-Me, .My-Work, .Contact-Me {
+  background-color: #214050;
+  clear: both;
+  color: #ffffff;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  height: 100%;
+  margin-bottom: 10px;
+  padding: 20px;
+  border-top-style: double;
+  border-bottom-style: double;
+ }
+
+ .My-Work, .Contact-Me {
+  text-align: center;
+ }
+
+.About-Me img, .My-Work img, .Contact-Me img {
+  margin: 5px;
+  max-width: 200px;
+}
+
+.About-Me h2, .My-Work h2, .Contact-Me h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.zoom {
+  transition: transform 0.2s;
+  margin: 0 5px;
+}
+
+.zoom:hover {
+  transform: scale(1.5);
+}
+
+.section-content {
+  margin: 20px;
+}
+
+
