--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ a {
 }
 
 p {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 /* Headliner behind the profile picture */
@@ -83,10 +83,10 @@ p {
   margin-right: 25px;
 }
 
-.float-right {
+/* .float-right {
   float: right;
   margin-left: 25px;
-}
+} */
 
 .content {
   display: inline-block;
@@ -112,7 +112,7 @@ p {
  }
 
 .About-Me img, .My-Work img, .Contact-Me img {
-  margin: 5px;
+  margin: 10px;
   max-width: 200px;
 }
 
